<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Thermal Sniffer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="searching_bluetooth_sender">Searching Bluetooth Sender!</string>
    <string name="ble_image">BLE Image</string>
    <string name="tempslidertext">Temp Sensitivity</string>
    <string name="windslidertext">Wind Sensitivity</string>
    <string name="timeslidertext">Time Axis Scale</string>
    <string name="celcius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="submit">Submit</string>
    <string name="wind_calibration">Wind calibration</string>
    <string name="in_fahrenheit">in Fahrenheit</string>
    <string name="temp_range_auto">temp range auto</string>
    <string name="in_minutes">in Minutes</string>
    <string name="max_time_to_show">Max Time to show</string>
    <string name="icon">icon</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="max_wind">Max Wind</string>
    <string name="in_seconds">in Seconds</string>
    <string name="show_in_celcius">show in Celcius</string>
</resources>
