<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/max_wind"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/wind_calibration"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/switchAutoScale"
        app:layout_constraintTop_toBottomOf="@+id/switchAutoScale" />

    <Switch
        android:id="@+id/switchAutoScale"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:text="@string/temp_range_auto"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/switchFahrenheit"
        app:layout_constraintTop_toBottomOf="@+id/switchFahrenheit" />

    <Switch
        android:id="@+id/switchFahrenheit"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:text="@string/show_in_celcius"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/switchMinutes"
        app:layout_constraintTop_toBottomOf="@+id/switchMinutes" />

    <Switch
        android:id="@+id/switchMinutes"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:text="@string/in_seconds"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <EditText
        android:id="@+id/editMinWind"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@android:string/untitled"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName6"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName6"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editMaxTemp"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@android:string/untitled"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editWindDivider"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@android:string/untitled"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/max_temperature"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/in_minutes"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchMinutes"
        app:layout_constraintStart_toEndOf="@+id/switchMinutes" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/in_fahrenheit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchFahrenheit"
        app:layout_constraintStart_toEndOf="@+id/switchFahrenheit" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/max_time_to_show"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMaxTime"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/idButtonOk"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:text="Close"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/editWindDivider"
        app:layout_constraintTop_toBottomOf="@+id/editWindDivider" />

</androidx.constraintlayout.widget.ConstraintLayout>